--- a/backend/package.json
+++ b/backend/package.json
@@ -27,9 +27,11 @@
     "celebrate": "^14.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-winston": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.1",
-    "validator": "^13.5.2"
+    "validator": "^13.5.2",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
